# tuga-sp

./: .gitignore  LICENSE  README.md  pyproject.toml
src/tugasp/: inference.py  train.py
src/tugasp/data/: __init__.py  adapters.py  dataset.py  element_properties.yaml  loader.py  onthefly_dataset.py  petiffor_embedding.csv
src/tugasp/models/: layers.py  lit_model.py  model.py
src/tugasp/utils/: features.py
tests/: full_run_site_prop.py  test_basic.py  test_dihedrals.py  test_onthefly_loaders.py  test_site_properties.py  test_state_properties.py
