[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tuga-sp"
version = "0.1.0"
description = "Invariant Graph Neural Network for property prediction based on 3-body interactions."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Pierre-Paul De Breuck", email = "pierre-paul.debreuck@rub.de" }
]
dependencies = [
    "torch>=2.0.0",
    "torch_geometric>=2.3.0",
    "pytorch-lightning>=2.0.0",
    "pymatgen>=2023.0.0",
    "pandas",
    "numpy",
    "ase",
    "scikit-learn>=1.3",
    "joblib>=1.3",
    "tqdm>=4.65",
]

[project.optional-dependencies]
benchmarks = [
    "hydra-core>=1.2",
    "hydra-submitit-launcher>=1.2",
    "submitit>=1.4",
    "wandb>=0.15",
    "matminer>=0.9",
]
dev = [
    "pytest",
    "black",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tugasp"]
